# ifc2x3-SDK

./: CMakeLists.txt
include/Step/: Array.h  BaseCopyOp.h  BaseExpressDataSet.h  BaseObject.h  BaseSPFObject.h  BaseSPFReader.h  BaseSPFWriter.h  BaseVisitor.h  CallBack.h  ClassType.h  ClientData.h  ClientDataHandler.h  Config.h.in  RefLinkedList.h  Referenced.h  SPFData.h  SPFFunctions.h  SPFHeader.h  SimpleTypes.h  String.h  Types.h  logger.h
include/ifc2x3/: Config.h.in
src/Step/: BaseCopyOp.cpp  BaseEntity.cpp  BaseExpressDataSet.cpp  BaseObject.cpp  BaseSPFObject.cpp  BaseSPFReader.cpp  BaseSPFWriter.cpp  BaseVisitor.cpp  CMakeLists.txt  ClassType.cpp  ClientData.cpp  ClientDataHandler.cpp  Referenced.cpp  SPFData.cpp  SPFFunctions.cpp  SPFHeader.cpp  String.cpp  logger.cpp
src/ifc2x3/: CMakeLists.txt  Derived.cpp
tests/Derived/ICTO/: main.cpp
tests/Derived/ICTO2D/: main.cpp
tests/Derived/ICTO2DnonUniform/: main.cpp
tests/Derived/ICTO3D/: main.cpp
tests/Derived/ICTO3DnonUniform/: main.cpp
tests/Derived/IfcAxis1Placement/: main.cpp
tests/Derived/IfcAxis2Placement2D/: main.cpp
tests/Derived/IfcAxis2Placement3D/: main.cpp
tests/Derived/IfcBSplineCurve/: main.cpp
tests/Derived/IfcBooleanResult/: main.cpp
tests/Derived/IfcBoundingBox/: main.cpp
tests/Derived/IfcCartesianPoint/: main.cpp
tests/Derived/IfcCompositeCurve/: main.cpp
tests/Derived/IfcCompositeCurveSegment/: main.cpp
tests/Derived/IfcCsgPrimitive3D/: main.cpp
tests/Derived/IfcCurve/: main.cpp
tests/Derived/IfcCurveBoundedPlane/: main.cpp
tests/Derived/IfcDerivedUnit/: main.cpp
tests/Derived/IfcDirection/: main.cpp
tests/Derived/IfcEdgeLoop/: main.cpp
tests/Derived/IfcElementarySurface/: main.cpp
tests/Derived/IfcFaceBasedSurfaceModel/: main.cpp
(+24 files in other folders)
